--- a/index.html
+++ b/index.html
@@ -249,128 +249,135 @@
 
 
 
-    <!-- Portfolio section -->
-    <section id="portfolio" class="section">
-        <div class="container text-center">
-            <h6 class="subtitle">Portfolio</h6>
-            <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Here are some of the amazing projects I've worked on,<br> showcasing my skills in web development.</p>
+ <!-- Portfolio section -->
+<section id="portfolio" class="section">
+    <div class="container text-center">
+        <h6 class="subtitle">Portfolio</h6>
+        <h6 class="section-title mb-4">Check My Wonderful Works</h6>
+        <p class="mb-5 pb-4">Here are some of the amazing projects I've worked on,<br> showcasing my skills in web development.</p>
 
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-1.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Copy Ninjas</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal1"><i class="ti-zoom-in"></i></a>
-                                <a href="https://copyninjas.io/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-2.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Digital Solopreneur</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal2"><i class="ti-zoom-in"></i></a>
-                                <a href="https://digitalsolopreneur.com/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-1.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Copy Ninjas</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal1"><i class="ti-zoom-in"></i></a>
+                            <a href="https://copyninjas.io/" target="_blank"><i class="ti-link"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-3.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Culleys</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal3"><i class="ti-zoom-in"></i></a>
-                                <a href="https://culleys.co.nz/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-4.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Hire Engage</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal4"><i class="ti-zoom-in"></i></a>
-                                <a href="https://hireengage.com/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-5.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Inbox Society</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal5"><i class="ti-zoom-in"></i></a>
-                                <a href="https://www.inboxsociety.com/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-6.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Joons Solutions</h5>
-                                <a href="javascript:void(0)" class="open-modal" data-modal="modal6"><i class="ti-zoom-in"></i></a>
-                                <a href="https://joonsolutions.com/" target="_blank"><i class="ti-link"></i></a>
-                            </div>
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-2.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Digital Solopreneur</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal2"><i class="ti-zoom-in"></i></a>
+                            <a href="https://digitalsolopreneur.com/" target="_blank"><i class="ti-link"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Modal Structures -->
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Copy Ninjas</h4>
-                    <p>For this project, we utilized WordPress and hosted it on an AWS server. Built with Elementor, it includes various integrated plugins to enhance functionality and user experience. The combination of AWS hosting and Elementor's flexibility ensured a robust and scalable website solution.</p>
+            <div class="col-sm-4">
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-3.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Culleys</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal3"><i class="ti-zoom-in"></i></a>
+                            <a href="https://culleys.co.nz/" target="_blank"><i class="ti-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-4.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Hire Engage</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal4"><i class="ti-zoom-in"></i></a>
+                            <a href="https://hireengage.com/" target="_blank"><i class="ti-link"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="modal2" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Digital Solopreneur</h4>
-                    <p>Developed with WordPress and Thrive Builder, this is one of the WordPress sites I created for a previous employer. The project focused on creating a dynamic and interactive site, incorporating advanced design elements and optimizing it for speed and SEO.</p>
+            <div class="col-sm-4">
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-5.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Inbox Society</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal5"><i class="ti-zoom-in"></i></a>
+                            <a href="https://www.inboxsociety.com/" target="_blank"><i class="ti-link"></i></a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div id="modal3" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Culleys</h4>
-                    <p>Using the Shopify Debut theme, this eCommerce site was developed during my tenure at a previous company. The project involved customizing the theme to meet client specifications, integrating necessary plugins, and optimizing the site for performance and user experience.</p>
-                </div>
-            </div>
-            <div id="modal4" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Hire Engage</h4>
-                    <p>A standout project using WordPress and Elementor Builder, where we implemented GoHighLevel integration for enhanced functionality. This project demonstrated my ability to integrate CRM tools, streamline business processes, and deliver a highly efficient and user-friendly website.</p>
-                </div>
-            </div>
-            <div id="modal5" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Inbox Society</h4>
-                    <p>This project was built on the Kartra platform, showcasing one of the SaaS solutions I developed at a former company. It involved creating and managing complex marketing funnels, integrating email automation, and ensuring seamless user experience for a diverse client base.</p>
-                </div>
-            </div>
-            <div id="modal6" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h4>Joons Solutions</h4>
-                    <p>This project involved WordPress, Elementor Builder, and various job listings plugins for a comprehensive site solution. It included customizing the job listings functionality, ensuring smooth user interactions, and optimizing the site for search engines and user engagement.</p>
+                <div class="img-wrapper">
+                    <img src="assets/imgs/folio-6.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-infos">
+                            <h5>Joons Solutions</h5>
+                            <a href="javascript:void(0)" class="open-modal" data-modal="modal6"><i class="ti-zoom-in"></i></a>
+                            <a href="https://joonsolutions.com/" target="_blank"><i class="ti-link"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- End of portfolio section -->
+
+        <!-- Modal Structures -->
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Copy Ninjas</h4>
+                <p>For this project, we utilized WordPress and hosted it on an AWS server. Built with Elementor, it includes various integrated plugins to enhance functionality and user experience. The combination of AWS hosting and Elementor's flexibility ensured a robust and scalable website solution.</p>
+                <p><a href="https://copyninjas.io/" target="_blank">Visit Copy Ninjas</a></p>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Digital Solopreneur</h4>
+                <p>Developed with WordPress and Thrive Builder, this is one of the WordPress sites I created for a previous employer. The project focused on creating a dynamic and interactive site, incorporating advanced design elements and optimizing it for speed and SEO.</p>
+                <p><a href="https://digitalsolopreneur.com/" target="_blank">Visit Digital Solopreneur</a></p>
+            </div>
+        </div>
+        <div id="modal3" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Culleys</h4>
+                <p>Using the Shopify Debut theme, this eCommerce site was developed during my tenure at a previous company. The project involved customizing the theme to meet client specifications, integrating necessary plugins, and optimizing the site for performance and user experience.</p>
+                <p><a href="https://culleys.co.nz/" target="_blank">Visit Culleys</a></p>
+            </div>
+        </div>
+        <div id="modal4" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Hire Engage</h4>
+                <p>A standout project using WordPress and Elementor Builder, where we implemented GoHighLevel integration for enhanced functionality. This project demonstrated my ability to integrate CRM tools, streamline business processes, and deliver a highly efficient and user-friendly website.</p>
+                <p><a href="https://hireengage.com/" target="_blank">Visit Hire Engage</a></p>
+            </div>
+        </div>
+        <div id="modal5" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Inbox Society</h4>
+                <p>This project was built on the Kartra platform, showcasing one of the SaaS solutions I developed at a former company. It involved creating and managing complex marketing funnels, integrating email automation, and ensuring seamless user experience for a diverse client base.</p>
+                <p><a href="https://www.inboxsociety.com/" target="_blank">Visit Inbox Society</a></p>
+            </div>
+        </div>
+        <div id="modal6" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h4>Joons Solutions</h4>
+                <p>This project involved WordPress, Elementor Builder, and various job listings plugins for a comprehensive site solution. It included customizing the job listings functionality, ensuring smooth user interactions, and optimizing the site for search engines and user engagement.</p>
+                <p><a href="https://joonsolutions.com/" target="_blank">Visit Joons Solutions</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End of portfolio section -->
+
 
     <!-- Testmonial Section -->
     <section id="testmonial" class="section">
