--- a/index.html
+++ b/index.html
@@ -403,7 +403,8 @@
                         <div class="card testmonial-card border">
                             <div class="card-body">
                                 <img src="assets/imgs/avatar-1.jpg" alt="">
-                                <p>Working with Keeper John Britania has been a game-changer for our business. His expertise in web development and email automation transformed our online presence and streamlined our communication processes. The new website he developed for us is not only visually stunning but also incredibly functional. Highly recommended!</p>
+                                <p>John is a hardworking and dedicated professional. He consistently troubleshoots our issues, whether they are technical or design-related, with expertise and efficiency. His skills and knowledge have been of great value to our business
+                                </p>
                                 <h1 class="title">Renee Ngo</h1>
                                 <h1 class="subtitle">COO, Digital Soloprenuer</h1>
                             </div>
@@ -711,11 +712,11 @@
                   "events": {
                     "onhover": {
                       "enable": true,
-                      "mode": "repulse"
+                      "mode": "grab"
                     },
                     "onclick": {
                       "enable": true,
-                      "mode": "push"
+                      "mode": "grab"
                     },
                     "resize": true
                   },
