--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                 <p>John is a hardworking and dedicated professional. He consistently troubleshoots our issues, whether they are technical or design-related, with expertise and efficiency. His skills and knowledge have been of great value to our business
                                 </p>
                                 <h1 class="title">Renee Ngo</h1>
-                                <h1 class="subtitle">COO, Digital Soloprenuer</h1>
+                                <h1 class="subtitle">Operations and Project Head, Digital Soloprenuer</h1>
                             </div>
                         </div>
                     </div>
